objects/Project_Management__c.object
<CustomObject>
    <description>This following custom object will track the tracking of projects.</description>
    <fields>
        <fullName>Completed_Projects__c</fullName>
        <label>Completed Projects</label>
        <summaryFilterItems>
            <field>Release_Phase__c.Project_State__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Release_Phase__c.Project_Management__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will show the Customer Success Management record to which this project is associated with.</description>
        <inlineHelpText>This field will show the Customer Success Management record to which this project is associated with.</inlineHelpText>
        <label>Customer Success Management</label>
        <referenceTo>Customer_Success_Management__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Project_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Tracking (End User Account)</relationshipLabel>
        <relationshipName>Project_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Project_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_Projects__c</fullName>
        <label>Open Projects</label>
        <summaryFilterItems>
            <field>Release_Phase__c.Project_State__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Release_Phase__c.Project_Management__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Status_new__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will track the sold to value for this project tracking.</description>
        <inlineHelpText>This field will track the sold to value for this project tracking.</inlineHelpText>
        <label>Sold-To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Tracking (Sold-To Account)</relationshipLabel>
        <relationshipName>Project_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Status__c</columns>
        <columns>Executive_Sponsor__c</columns>
        <columns>Completed_Projects__c</columns>
        <columns>Open_Projects__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Tracking</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>